# Trapalyzer

./: .gitignore  .pre-commit-config.yaml  Analyse.ipynb  Convert files.ipynb  License.txt  Readme.md  pyproject.toml  segment_profile.json  setup.cfg
Tutorial/: Readme.md  example_profile.json
partseg_plugin/: pyproject.toml  setup.py
partseg_plugin/neutrofile_plugin/: __init__.py  measurement.py  napari_functions.py  segmentation.py  widgets.py
src/Trapalyzer/: __init__.py  measurement.py  napari_functions.py  segmentation.py  widgets.py
