[metadata]
name = PartSeg_CouNT
description = Automatic feature detection and quantification for in-vitro NETosis experiments plugin for PartSeg
url = https://github.com/Czaki/Neutrofile_analysis
author = Grzegorz Bokota, Michał Ciach
author_email = g.bokota@uw.edu.pl, m_ciach@student.uw.edu.pl
license = MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    PartSeg
    SimpleITK
    napari
    numpy
python_requires = >=3.7
package_dir =
    =partseg_plugin
setup_requires =
    setuptools_scm[toml]>=3.4

[options.packages.find]
where = partseg_plugin

[options.entry_points]
napari.plugin =
    neutrofile helpers = neutrofile_plugin
partseg.plugins =
    .neutrofile_analysis = neutrofile_plugin
