[metadata]
name = Trapalyzer
description = Automatic feature detection and quantification for in-vitro NETosis experiments plugin for PartSeg
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/Czaki/Neutrofile_analysis
author = Grzegorz Bokota, Michał Ciach
author_email = g.bokota@uw.edu.pl, m_ciach@student.uw.edu.pl
license = MIT
license_file = License.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    PartSeg
    SimpleITK
    napari
    numpy
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools_scm[toml]>=3.4

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    neuthrophil helpers = Trapalyzer
partseg.plugins =
    .neuthrophil_analysis = Trapalyzer
